# CS5914-High-Performance-Code-Generation-Using-LLMs

./: README.md
llm_blue/: README.md  agent_functions.py  pyproject.toml
llm_blue/data/1_benchmark/: baseline_claude-3-5-haiku-latest.cu  baseline_gemini-1.5-flash.cu  baseline_o1-mini.out
llm_blue/data/2_seed_generation/claude-3-5-haiku-latest/seed_0/: evaluation.json  kernel_code.cu  raw_response.txt
llm_blue/data/2_seed_generation/claude-3-5-haiku-latest/seed_1/: evaluation.json  kernel_code.cu  raw_response.txt
llm_blue/data/2_seed_generation/claude-3-5-haiku-latest/seed_2/: evaluation.json  kernel_code.cu  raw_response.txt
llm_blue/data/2_seed_generation/claude-3-5-haiku-latest/seed_3/: evaluation.json  kernel_code.cu  (+1 more)
llm_blue/data/logs/: baseline.txt  integration.txt
llm_blue/data/prompts/1_baseline/: prompt1.txt
llm_blue/data/results/2_seed_generation/: claude-3-5-haiku-latest_all_seeds.json  claude-3-5-sonnet-latest_all_seeds.json  claude-3-7-sonnet-latest_all_seeds.json  gemini-1.5-flash_all_seeds.json  gpt-4o-mini_all_seeds.json  llama-3.3-70b-versatile_all_seeds.json  o1-mini_all_seeds.json  o3-mini_all_seeds.json
llm_blue/data/test_data/: integration_results.csv
llm_blue/notebooks/: 1_baseline.ipynb  2_seed_iteration.ipynb  pydantic_integration_check.ipynb  tests.ipynb
llm_blue/notebooks/data/1_benchmark/: baseline_claude-3-5-haiku-latest.out  baseline_claude-3-5-sonnet-latest.cu  baseline_claude-3-5-sonnet-latest.out  baseline_gpt-4o-mini.cu  baseline_gpt-4o-mini.out  baseline_llama-3.3-70b-versatile.cu  baseline_llama-3.3-70b-versatile.out  baseline_o1-mini.cu  baseline_qwen-2.5-32b.cu
llm_blue/notebooks/data/test_data/: baseline_results.csv
(+762 files in other folders)
