[project]
name = "llm-gen4hpc"
version = "0.1.0"
description = ""
authors = [
    {name = "PrayashJoshi",email = "prayashjoshi@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-openai (>=0.3.5,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

