[project]
name = "llm-gen4hpc"
version = "0.1.0"
description = ""
authors = [
    {name = "PrayashJoshi",email = "prayashjoshi@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.63.0,<2.0.0)",
    "anthropic (>=0.45.2,<0.46.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "google (>=3.0.0,<4.0.0)",
    "pydantic-ai (>=0.0.24,<0.0.25)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "logfire (>=3.5.3,<4.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "great-tables[extra] (>=0.16.1,<0.17.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "mutmut (>=3.2.3,<4.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "psutil (>=6.1.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
